--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Victor Emanuel</title>
 </head>
 <body>
-    <a href="HTML + JS + CSS/Netflix/">Netflix</a>
+    <a href="/Netflix/">Netflix</a>
 </body>
 </html>
